@@ -94,6 +94,13 @@ proc test_all_threads { name kill } {
 		fail "all threads ran once ($name) (total $i threads ran)"
 	    }
 	}
+	-re "Program received signal SIGTRAP.*Thread \[0-9\]* \\(zombie\\).*$gdb_prompt $" {
+	    if { $kill == 1 } {
+		kfail "gdb/1265" "Running threads ($name) (zombie thread)"
+	    } else {
+		fail "Running threads ($name) (unknown output)"
+	    }
+	}
 	-re "$gdb_prompt" {
 	    fail "Running threads ($name) (unknown output)"
 	}
