@@ -1,3 +1,8 @@
+2003-06-29  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gdb.threads/print-threads.exp (test_all_threads): Add kfail for
+	gdb/1265.
+
 2003-06-29  Michael Chastain  <mec@shout.net>
 	    Daniel Jacobowitz  <drow@mvista.com>
 
